--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,8 @@
 [defaults]
-inventory=./hosts.ini
-roles_path=./roles
-allow_world_readable_tmpfiles=true
+inventory = ./hosts.ini
+roles_path = ./roles
+allow_world_readable_tmpfiles = True
+host_key_checking = False
+
+[ssh_connection]
+pipelining = True
