Fix footer guide path + fix github jekyll gem

--- a/docs/_data/footer.yml
+++ b/docs/_data/footer.yml
@@ -1,6 +1,6 @@
 - name: Home
   link: /
 - name: Guide
-  link: /guide.html
+  link: /guide/chapters/01-introduction
 - name: About
   link: /about.html
