--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -5,7 +5,7 @@ source "https://rubygems.org"
 git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
-gem "jekyll"
+# gem "jekyll"
 
 group :jekyll_plugins do
   gem "jekyll-paginate"
