Replace Google Tag Manager with plain vanilla google tag

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,3 +10,5 @@ collections:
   chapters:
     output: true
     permalink: /guide/:collection/:name
+# Google Analytics
+google_analytics: UA-165439578-1
